# server/controllers/Mentoring_db/CourseMaterialsController.js
@@ -1,0 +1,59 @@
+import CourseMaterialsControllerGenerated from "./generated/CourseMaterialsControllerGenerated";
+
+// Properties
+import Properties from "../../properties";
+
+// Database
+import CourseMaterialsModel from "../../models/Mentoring_db/CourseMaterialsModel";
+
+// Security
+import { authorize } from "../../security/SecurityManager";
+
+// Errors
+import Errors from "../../classes/Errors";
+import ErrorManager from "../../classes/ErrorManager";
+
+const customControllers = {
+  
+  /**
+   * Override here your custom routes
+   * EXAMPLE:
+   *
+    
+   init: router => {
+     const baseUrl = `${Properties.api}/coursematerials`;
+     
+     // custom route
+     router.get(baseUrl + "/:id", customControllers.get);
+     
+     // Init super
+     CourseMaterialsControllerGenerated.init(router);
+    },
+
+  */
+
+  /**
+   * Override here your custom controllers
+   * EXAMPLE:
+   *
+   
+    get: async (req, res) => {
+      try {
+        console.log("This is my custom controller");
+        const result = await CourseMaterialsModel.get(req.params.id);
+        res.json(result);
+      } catch (err) {
+        const safeErr = ErrorManager.getSafeError(err);
+        res.status(safeErr.status).json(safeErr);
+      }
+    }
+
+   */
+   
+};
+
+export default {
+  ...CourseMaterialsControllerGenerated,
+  ...customControllers
+};
+
